# cobalt

./: .clang-format  .gitignore  README.md  meson.build
data/: cobalt.gresource.xml  expose-pids-error.xml  expose-pids-guide.xml  expose-pids-warning.xml
src/: cobalt-alert.c  cobalt-alert.h  cobalt-config.c  cobalt-config.h  cobalt-host.c  cobalt-host.h  cobalt-launcher.c  cobalt-launcher.h  cobalt-main.c
